Update med GUI. Ger varning i konsolen, men applikationen startar. Fortsätter bugfixa.